--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+build
+dist
 .DS_Store
 .env.local
 .env.development.local
