--- a/packages/outline-mentions-plugin/package.json
+++ b/packages/outline-mentions-plugin/package.json
@@ -1,5 +1,8 @@
 {
   "name": "outline-mentions-plugin",
   "version": "1.0.0",
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "dependencies": {
+    "shared": "1.0.0"
+  }
 }
