Revise Node architecture
WIP

Revised stratgy

--- a/packages/outline-emoji-plugin/package.json
+++ b/packages/outline-emoji-plugin/package.json
@@ -1,5 +1,8 @@
 {
   "name": "outline-emoji-plugin",
   "version": "1.0.0",
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "dependencies": {
+    "outline": "1.0.0"
+  }
 }
