--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-flow-strip-types": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "confusing-browser-globals": "^1.0.10",
     "eslint": "^7.12.1",
