--- a/packages/outline-mentions-plugin/package.json
+++ b/packages/outline-mentions-plugin/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "dependencies": {
-    "shared": "1.0.0"
+    "shared": "1.0.0",
+    "outline": "1.0.0"
   }
 }
