--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,5 +2,8 @@
   "name": "shared",
   "version": "1.0.0",
   "private": true,
-  "main": "src/index.js"
+  "main": "src/index.js",
+  "dependencies": {
+    "outline": "1.0.0"
+  }
 }
