--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start": "npm run build && npm start --prefix packages/outline-example",
     "build": "node scripts/build.js",
     "build-prod": "node scripts/build.js --prod",
-    "watch": "node scripts/build.js --watch"
+    "watch": "node scripts/build.js --watch",
+    "flow": "node ./scripts/tasks/flow.js"
   },
   "devDependencies": {
     "@babel/plugin-transform-flow-strip-types": "^7.12.1",
+    "@babel/preset-flow": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
@@ -31,7 +33,7 @@
     "eslint-plugin-no-function-declare-after-return": "^1.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "flow": "^0.2.3",
+    "flow-bin": "^0.137.0",
     "google-closure-compiler": "^20201006.0.0",
     "jest": "26.6.0",
     "minimist": "^1.2.5",
