Add format plugin

--- a/packages/outline-example/package.json
+++ b/packages/outline-example/package.json
@@ -10,7 +10,8 @@
     "outline-plain-text-plugin": "1.0.0",
     "outline-rich-text-plugin": "1.0.0",
     "outline-emoji-plugin": "1.0.0",
-    "outline-mentions-plugin": "1.0.0"
+    "outline-mentions-plugin": "1.0.0",
+    "outline-format-plugin": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
