Rename shared to plugin-shared, add more OutlineNode types

--- a/.flowconfig
+++ b/.flowconfig
@@ -23,7 +23,7 @@ suppress_type=$FixMe
 suppress_type=$FlowExpectedError
 
 [libs]
-./packages/shared/libdefs/
+./libdefs/
 
 [strict]
 nonstrict-import
