--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "watch": "node scripts/build.js --watch",
     "flow": "node ./scripts/tasks/flow.js",
     "test": "jest",
-    "debug-test": "node --inspect-brk node_modules/.bin/jest --runInBand"
+    "debug-test": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "prettier": "node ./scripts/prettier.js write-changed"
   },
   "devDependencies": {
     "@babel/plugin-transform-flow-strip-types": "^7.12.1",
