Adds history plugin, rename body -> root, few other changes

--- a/packages/outline-example/package.json
+++ b/packages/outline-example/package.json
@@ -11,7 +11,8 @@
     "outline-rich-text-plugin": "1.0.0",
     "outline-emoji-plugin": "1.0.0",
     "outline-mentions-plugin": "1.0.0",
-    "outline-format-plugin": "1.0.0"
+    "outline-format-plugin": "1.0.0",
+    "outline-history-plugin": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
