--- a/packages/outline-format-plugin/package.json
+++ b/packages/outline-format-plugin/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "dependencies": {
     "outline": "1.0.0",
+    "outline-rich-text-plugin": "1.0.0",
     "plugin-shared": "1.0.0"
   }
 }
