--- a/packages/outline-mentions-plugin/package.json
+++ b/packages/outline-mentions-plugin/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "dependencies": {
+    "react-dom": "^17.0.1",
     "outline": "1.0.0",
     "plugin-shared": "1.0.0"
   }
