--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "confusing-browser-globals": "^1.0.10",
     "eslint": "^7.12.1",
     "eslint-config-fbjs": "^3.1.1",
