--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "workspaces": [
-    "packages/*",
-    "plugin-shared"
+    "packages/*"
   ],
   "scripts": {
     "start": "npm run build && npm start --prefix packages/outline-example",
