--- a/packages/outline-example/package.json
+++ b/packages/outline-example/package.json
@@ -7,13 +7,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "outline": "1.0.0",
-    "outline-plain-text-plugin": "1.0.0",
-    "outline-rich-text-plugin": "1.0.0",
-    "outline-emoji-plugin": "1.0.0",
-    "outline-mentions-plugin": "1.0.0",
-    "outline-format-plugin": "1.0.0",
-    "outline-history-plugin": "1.0.0",
-    "outline-toolbar-plugin": "1.0.0"
+    "outline-react": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
