--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "description": "Outline is a fast, lightweight, rich-text editor for React",
-  "version": "1.0.0",
+  "description": "Outline is a fast, lightweight, rich-text editor.",
+  "version": "0.0.4",
+  "license": "MIT",
+  "author": {
+    "name": "Dominic Gannaway",
+    "email": "dg@domgan.com"
+  },
   "private": true,
   "workspaces": [
     "packages/*"
@@ -15,7 +20,8 @@
     "flow": "node ./scripts/tasks/flow.js",
     "test": "npm run build && jest",
     "debug-test": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "prettier": "node ./scripts/prettier.js write-changed"
+    "prettier": "node ./scripts/prettier.js write-changed",
+    "prepare-release": "node ./scripts/prepare-release.js"
   },
   "devDependencies": {
     "@babel/plugin-transform-flow-strip-types": "^7.12.1",
@@ -25,6 +31,7 @@
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
+    "child-process-promise": "^2.2.1",
     "confusing-browser-globals": "^1.0.10",
     "eslint": "^7.12.1",
     "eslint-config-fbjs": "^3.1.1",
