--- a/packages/outline-example/package.json
+++ b/packages/outline-example/package.json
@@ -8,7 +8,7 @@
     "react-scripts": "4.0.0",
     "outline": "0.0.5",
     "outline-react": "0.0.5",
-    "outline-helpers": "0.0.5"
+    "outline-selection-helpers": "0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
