Move SelectionHelpers to outline-react

--- a/.flowconfig
+++ b/.flowconfig
@@ -27,13 +27,12 @@ module.name_mapper='^outline-react/useOutlineFocusIn' -> '<PROJECT_ROOT>/package
 module.name_mapper='^outline-react/useOutlineInputEvents' -> '<PROJECT_ROOT>/packages/outline-react/src/useOutlineInputEvents.js'
 module.name_mapper='^outline-react/OutlineHotKeys' -> '<PROJECT_ROOT>/packages/outline-react/src/OutlineHotKeys.js'
 module.name_mapper='^outline-react/OutlineEnv' -> '<PROJECT_ROOT>/packages/outline-react/src/OutlineEnv.js'
+module.name_mapper='^outline-react/OutlineSelectionHelpers' -> '<PROJECT_ROOT>/packages/outline-react/src/OutlineSelectionHelpers.js'
 
 module.name_mapper='^outline-extensions/HeaderNode' -> '<PROJECT_ROOT>/packages/outline-extensions/src/OutlineHeaderNode.js'
 module.name_mapper='^outline-extensions/ListNode' -> '<PROJECT_ROOT>/packages/outline-extensions/src/OutlineListNode.js'
 module.name_mapper='^outline-extensions/ImageNode' -> '<PROJECT_ROOT>/packages/outline-extensions/src/OutlineImageNode.js'
 module.name_mapper='^outline-extensions/QuoteNode' -> '<PROJECT_ROOT>/packages/outline-extensions/src/OutlineQuoteNode.js'
-
-module.name_mapper='^outline-selection-helpers$' -> '<PROJECT_ROOT>/packages/outline-selection-helpers/src/index.js'
 
 suppress_type=$FlowIssue
 suppress_type=$FlowFixMe
